# robo_chess

./: .gitmodules  LICENSE  README.md
src/ur_dev/ur_apps/robo_chess/: CMakeLists.txt  README.md  package.xml
src/ur_dev/ur_apps/robo_chess/config/: params.yaml
src/ur_dev/ur_apps/robo_chess/include/robo_chess/config/: RoboChessConfig.h  RoboChessConfigGenerator.h
src/ur_dev/ur_apps/robo_chess/include/robo_chess/core/: RoboChessApplication.h
src/ur_dev/ur_apps/robo_chess/include/robo_chess/core/config/: RoboChessConfig.h
src/ur_dev/ur_apps/robo_chess/include/robo_chess/core/helpers/: ActionEventHandlerSpawner.h  RoboChessApplicationInitHelper.h  RobotModeHandler.h
src/ur_dev/ur_apps/robo_chess/include/robo_chess/defines/: RoboChessDefines.h  RoboChessFunctionalDefines.h  RoboChessTopics.h
src/ur_dev/ur_apps/robo_chess/include/robo_chess/external_api/: RoboChessExternalInterface.h  RoboChessRos2ParamProvider.h
src/ur_dev/ur_apps/robo_chess/include/robo_chess/external_api/config/: RoboChessExternalInterfaceConfig.h
src/ur_dev/ur_apps/robo_chess/include/robo_chess/motion/: ChessMoveMotionSequence.h  ParkMotionSequence.h  TurnEndMotionSequence.h
src/ur_dev/ur_apps/robo_chess/include/robo_chess/motion/config/: ChessMoveMotionSequenceConfig.h  ParkMotionSequenceConfig.h  RoboChessMotionSequenceConfig.h  TurnEndMotionSequenceConfig.h
src/ur_dev/ur_apps/robo_chess/launch/: launch.py
src/ur_dev/ur_apps/robo_chess/src/: main.cpp
src/ur_dev/ur_apps/robo_chess/src/config/: RoboChessConfigGenerator.cpp
src/ur_dev/ur_apps/robo_chess/src/core/: RoboChessApplication.cpp
src/ur_dev/ur_apps/robo_chess/src/core/helpers/: ActionEventHandlerSpawner.cpp  RoboChessApplicationInitHelper.cpp  RobotModeHandler.cpp
src/ur_dev/ur_apps/robo_chess/src/external_api/: RoboChessExternalInterface.cpp  RoboChessRos2ParamProvider.cpp
src/ur_dev/ur_apps/robo_chess/src/motion/: ChessMoveMotionSequence.cpp  ParkMotionSequence.cpp  TurnEndMotionSequence.cpp
src/ur_dev/ur_apps/robo_chess_common/: CMakeLists.txt  package.xml  robo_chess_commonConfig.cmake
src/ur_dev/ur_apps/robo_chess_common/include/robo_chess_common/defines/: RoboChessCommonDefines.h  RoboChessCommonTopics.h
src/ur_dev/ur_apps/robo_chess_common/include/robo_chess_common/message_helpers/: RoboChessCommonMessageHelpers.h
src/ur_dev/ur_apps/robo_chess_common/src/defines/: RoboChessCommonDefines.cpp
src/ur_dev/ur_apps/robo_chess_common/src/message_helpers/: RoboChessCommonMessageHelpers.cpp
src/ur_dev/ur_apps/robo_chess_interfaces/: CMakeLists.txt  package.xml
src/ur_dev/ur_apps/robo_chess_interfaces/srv/: RobotAbortMotion.srv  RobotChessMove.srv  RobotPark.srv  SetParkMode.srv
